# tiny-shell

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  modular-terminal.code-workspace
.cache/clangd/index/: datastructures.h.C7C2FB4DDC991118.idx  dynamic_array.c.0C976A694A4A4CE7.idx  dynamic_array.h.6339D4FCB45BB6A4.idx  hashmap_seperate_chaining.c.75DC1E6A1BEB84A6.idx  hashmap_seperate_chaining.h.594907ABA1B620FE.idx  main.c.165EF19A3A37509B.idx  main.c.F12BD8EFE7BAC072.idx  shared.c.2915E6BB9925AE31.idx  shared.h.12E9349A20234254.idx  terminal.c.56D8CAA8D5D1B788.idx  terminal.h.128DBAF35578D18A.idx
src/: Terminal.cpp  Terminal.h  main.c  main.cpp  terminal.c  terminal.h
